 - Local config settings for Log Limit and Log Context Lines were always saved to global and not saving to local.
 - Fix git gui invocation (Thanks, Pedro Melo)

Release 1.6.5 [2008-07-24]

 - updated specs
 - don't apply stash with --index by default, as this seems to cause more
	 problems than it solves currently (in the future, would be nice to auto
	 detect which strategy to use)
 - Always pass path with gitnub as first argument to improve compatibility
	 with gitnub 0.9 (Thanks, Seth Barber)

Release 1.6.4 [2008-07-15]
 - Fix: Bundle was crashing when trying to get the branch name of a submodule
	 that hadn't been checked out yet

Release 1.6.3 [2008-06-13]
 - Some fixes to ruby-git internals
 - Logging enabled to show executed git commands in debug mode - touch the file Support/DEBUG to turn on logging.
 - Fixed regression with Git#auto_add_rm - was causing merge conflicts to not properly work when dealing with delete/modify conflicts.
 - Fixed regression in stash changes command to properly ignore files again.
 
Release 1.6.2 [2008-06-05]
 - "Apply Stash" was changed to "Pop Stash"
 
Release 1.6.1 [2008-05-22]
 - Diff learned how to recognize submodule pointer changes, and now allows you to drill down and see what changed in the submodule.

Release 1.6.0 [2008-05-21]
 - Added "outgoing" command - see unpushed changes for all branches with tracking branches, in project and submodules
 - Fixed a few bugs with the automatic submodule updating.  Put in safe guard to prevent a cached repository from being deleted (in the case you manually ran git submodule update after the submodule was cached away)
 - Submodule learned how to know if he's been cloned yet.  Updated checkout / pull / merge logic to initialize and clone uncloned submodules.
 - Bugfix - push output was being garbled in some cases.  Cleaned up in hope to fix.