@@ -22,6 +22,7 @@
           ["Show diff check (yes or no)",   "git-tmbundle.show-diff-check",   [:global, :local], {:style => "width: 40px"}],
           [],
           ["Gitnub path",       "git-tmbundle.gitnub-path",       [:global], {:style => "width: 250px"}],
+          ["GitX path",         "git-tmbundle.gitx-path",         [:global], {:style => "width: 250px"}],
         ].each do |label, key, scopes, input_options|
       %>
       <tr>
