@@ -1,3 +1,4 @@
+ - Visualize History with GitX (Matthias Granberry)
  - Local config settings for Log Limit and Log Context Lines were always saved to global and not saving to local.
  - Fix git gui invocation (Thanks, Pedro Melo)
 
